@@ -24,13 +24,5 @@ COPY --from=builder /app/build/libs/*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT [ \
-  "java", \
-  "-XX:MaxRAMPercentage=70", \
-  "-XX:InitialRAMPercentage=50", \
-  "-XX:+UseZGC", \
-  "-Xss256k", \
-  "-XX:+ExitOnOutOfMemoryError", \
-  "-XX:HeapDumpPath=/tmp/heapdump.hprof", \
-  "-jar", "app.jar" \
-]
+ENTRYPOINT ["java", "-jar", "app.jar"]
+
